Streamline API surface for package metadata
* Removes the ComponentMetaInformation, which after ADR 015 no longer represents the data model correctly. Its name is also too generic. It was not part of a stable release yet, so removing it is OK.
* Introduces `package_metadata` and `package_artifact_metadata` as optional response fields of component APIs. The `package_` prefix makes it clear that these only apply to packages, not all components.
* Adopts the concept of `expand` query parameters to control what optional data should be returned by endpoints. This "scales" better than having a multitude of `include_` parameters.
* Records the decision of NOT materializing the hash verification results, and deferring computation to clients instead.

Note that `/api/v1/component/project/{uuid}` is no longer sortable by package publish date after this change. Instead:

* `/api/v2/projects/{uuid}/components` becomes sortable by package artifact publish date. Unfortunately, the required `LEFT JOIN` makes this expensive, but because the backing query is always limited to a single project, it should be fine.
* `/api/v2/components` gains new `package_artifact_published_at_(from|to)` parameters, which allows clients to narrow search results by publish dates. The endpoint does NOT support sorting by publish dates, as the sort-with-LEFT-JOIN penalty is too high for large `COMPONENT` tables.
