# apiserver/src/main/java/org/dependencytrack/resources/v2/ProjectsResource.java
@@ -30,24 +30,43 @@ import org.dependencytrack.api.v2.model.CloneProjectRequest;
 import org.dependencytrack.api.v2.model.CloneProjectResponse;
 import org.dependencytrack.api.v2.model.ListProjectComponentsResponse;
 import org.dependencytrack.api.v2.model.ListProjectComponentsResponseItem;
+import org.dependencytrack.api.v2.model.SortDirection;
 import org.dependencytrack.auth.Permissions;
 import org.dependencytrack.common.pagination.Page;
 import org.dependencytrack.model.Component;
+import org.dependencytrack.model.DependencyMetrics;
+import org.dependencytrack.model.PackageArtifactMetadata;
+import org.dependencytrack.model.PackageMetadata;
 import org.dependencytrack.persistence.jdbi.ComponentDao;
 import org.dependencytrack.persistence.jdbi.MetricsDao;
+import org.dependencytrack.persistence.jdbi.PackageArtifactMetadataDao;
+import org.dependencytrack.persistence.jdbi.PackageMetadataDao;
 import org.dependencytrack.persistence.jdbi.ProjectDao;
 import org.dependencytrack.persistence.jdbi.command.CloneProjectCommand;
+import org.dependencytrack.persistence.jdbi.query.ListProjectComponentsQuery;
 import org.dependencytrack.resources.AbstractApiResource;
+import org.dependencytrack.resources.v2.exception.ProblemDetailsException;
+import org.dependencytrack.resources.v2.exception.ProblemType;
+import org.dependencytrack.util.PurlUtil;
 import org.owasp.security.logging.SecurityMarkers;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
 import java.util.UUID;
+import java.util.function.Function;
+import java.util.stream.Collectors;
 
 import static org.dependencytrack.persistence.jdbi.JdbiFactory.inJdbiTransaction;
+import static org.dependencytrack.resources.v2.mapping.ModelMapper.map;
+import static org.dependencytrack.resources.v2.mapping.ModelMapper.mapDependencyMetrics;
 import static org.dependencytrack.resources.v2.mapping.ModelMapper.mapHashes;
 import static org.dependencytrack.resources.v2.mapping.ModelMapper.mapLicense;
 import static org.dependencytrack.resources.v2.mapping.ModelMapper.mapScope;
+import static org.dependencytrack.resources.v2.mapping.ModelMapper.mapSortDirection;
 
 @Provider
 public class ProjectsResource extends AbstractApiResource implements ProjectsApi {
@@ -59,40 +78,143 @@ public class ProjectsResource extends AbstractApiResource implements ProjectsApi
 
     @Override
     @PermissionRequired(Permissions.Constants.VIEW_PORTFOLIO)
-    public Response listProjectComponents(UUID uuid, Boolean onlyOutdated, Boolean onlyDirect, Integer limit, String pageToken) {
+    public Response listProjectComponents(
+            UUID uuid,
+            Boolean onlyOutdated,
+            Boolean onlyDirect,
+            String q,
+            List<String> expand,
+            Integer limit,
+            String pageToken,
+            SortDirection sortDirection,
+            String sortBy) {
+        final boolean hasExpand = expand != null && !expand.isEmpty();
+        final boolean expandMetrics = hasExpand && expand.contains("metrics");
+        final boolean expandPkgMeta = hasExpand && expand.contains("package_metadata");
+        final boolean expandPkgArtifactMeta = hasExpand && expand.contains("package_artifact_metadata");
+        final boolean expandOccurrenceCount = hasExpand && expand.contains("occurrence_count");
+
         return inJdbiTransaction(getAlpineRequest(), handle -> {
-            var projectId = handle.attach(ProjectDao.class).getProjectId(uuid);
+            final Long projectId = handle.attach(ProjectDao.class).getProjectId(uuid);
             if (projectId == null) {
                 throw new NotFoundException();
             }
-            requireProjectAccess(handle, UUID.fromString(String.valueOf(uuid)));
-            final Page<Component> componentsPage = handle.attach(ComponentDao.class)
-                    .listProjectComponents(projectId, onlyOutdated, onlyDirect, limit, pageToken);
+            requireProjectAccess(handle, uuid);
+
+            final ListProjectComponentsQuery.SortBy sortByEnum = switch (sortBy) {
+                case null -> null;
+                case "name" -> ListProjectComponentsQuery.SortBy.NAME;
+                case "group" -> ListProjectComponentsQuery.SortBy.GROUP;
+                case "last_inherited_risk_score" -> ListProjectComponentsQuery.SortBy.LAST_RISKSCORE;
+                case "package_artifact_metadata.published_at" -> ListProjectComponentsQuery.SortBy.PUBLISHED_AT;
+                default -> throw ProblemDetailsException.of(ProblemType.INVALID_SORT_BY, "Invalid sort_by: " + sortBy);
+            };
+
+            final Page<Component> componentsPage = handle
+                    .attach(ComponentDao.class)
+                    .listProjectComponents(new ListProjectComponentsQuery(
+                            projectId,
+                            onlyOutdated,
+                            onlyDirect,
+                            /* searchText */ q,
+                            expandOccurrenceCount,
+                            limit,
+                            pageToken,
+                            sortByEnum,
+                            mapSortDirection(sortDirection)));
+
+            var metricsByComponentId = Map.<Long, DependencyMetrics>of();
+            var pkgMetaByPackagePurl = Map.<String, PackageMetadata>of();
+            var pkgArtifactMetaByPurl = Map.<String, PackageArtifactMetadata>of();
+
+            if (!componentsPage.items().isEmpty()) {
+                if (expandMetrics) {
+                    final Set<Long> componentIds =
+                            componentsPage.items().stream()
+                                    .map(Component::getId)
+                                    .collect(Collectors.toSet());
+                    metricsByComponentId = handle
+                            .attach(MetricsDao.class)
+                            .getMostRecentDependencyMetrics(componentIds).stream()
+                            .collect(Collectors.toMap(
+                                    DependencyMetrics::getComponentId,
+                                    Function.identity()));
+                }
+                if (expandPkgMeta) {
+                    final Set<String> packagePurls =
+                            componentsPage.items().stream()
+                                    .filter(component -> component.getPurl() != null)
+                                    .map(component -> PurlUtil.purlPackageOnly(component.getPurl()))
+                                    .collect(Collectors.toSet());
+                    pkgMetaByPackagePurl =
+                            new PackageMetadataDao(handle).getAll(packagePurls).stream()
+                                    .collect(Collectors.toMap(
+                                            pm -> pm.purl().canonicalize(),
+                                            Function.identity()));
+                }
+                if (expandPkgArtifactMeta) {
+                    final Set<String> versionedPurls =
+                            componentsPage.items().stream()
+                                    .filter(component -> component.getPurl() != null)
+                                    .map(component -> component.getPurl().canonicalize())
+                                    .collect(Collectors.toSet());
+                    pkgArtifactMetaByPurl =
+                            new PackageArtifactMetadataDao(handle).getAll(versionedPurls).stream()
+                                    .collect(Collectors.toMap(
+                                            pam -> pam.purl().canonicalize(),
+                                            Function.identity()));
+                }
+            }
+
+            final var responseItems = new ArrayList<ListProjectComponentsResponseItem>(componentsPage.items().size());
+            for (final Component componentRow : componentsPage.items()) {
+                final String purlStr = componentRow.getPurl() != null
+                        ? componentRow.getPurl().canonicalize()
+                        : null;
+                final String packagePurlStr = componentRow.getPurl() != null
+                        ? PurlUtil.purlPackageOnly(componentRow.getPurl())
+                        : null;
+                final PackageArtifactMetadata pkgArtifactMeta = purlStr != null
+                        ? pkgArtifactMetaByPurl.get(purlStr)
+                        : null;
+                final var responseItem = ListProjectComponentsResponseItem.builder()
+                        .name(componentRow.getName())
+                        .hashes(mapHashes(componentRow))
+                        .classifier(componentRow.getClassifier() != null
+                                ? componentRow.getClassifier().name()
+                                : null)
+                        .scope(mapScope(componentRow.getScope()))
+                        .copyright(componentRow.getCopyright())
+                        .cpe(componentRow.getCpe())
+                        .group(componentRow.getGroup())
+                        .internal(componentRow.isInternal())
+                        .lastInheritedRiskScore(componentRow.getLastInheritedRiskScore())
+                        .license(componentRow.getLicense())
+                        .licenseExpression(componentRow.getLicenseExpression())
+                        .licenseUrl(componentRow.getLicenseUrl())
+                        .resolvedLicense(mapLicense(componentRow.getResolvedLicense()))
+                        .occurrenceCount(expandOccurrenceCount
+                                ? componentRow.getOccurrenceCount()
+                                : null)
+                        .purl(purlStr)
+                        .swidTagId(componentRow.getSwidTagId())
+                        .uuid(componentRow.getUuid())
+                        .version(componentRow.getVersion())
+                        .metrics(expandMetrics
+                                ? mapDependencyMetrics(metricsByComponentId.get(componentRow.getId()))
+                                : null)
+                        .packageMetadata(expandPkgMeta && packagePurlStr != null
+                                ? map(pkgMetaByPackagePurl.get(packagePurlStr))
+                                : null)
+                        .packageArtifactMetadata(expandPkgArtifactMeta
+                                ? map(pkgArtifactMeta)
+                                : null)
+                        .build();
+                responseItems.add(responseItem);
+            }
 
             final var response = ListProjectComponentsResponse.builder()
-                    .items(componentsPage.items().stream()
-                            .<ListProjectComponentsResponseItem>map(
-                                    componentRow -> ListProjectComponentsResponseItem.builder()
-                                            .name(componentRow.getName())
-                                            .hashes(mapHashes(componentRow))
-                                            .classifier(componentRow.getClassifier() != null ? componentRow.getClassifier().name() : null)
-                                            .scope(mapScope(componentRow.getScope()))
-                                            .copyright(componentRow.getCopyright())
-                                            .cpe(componentRow.getCpe())
-                                            .group(componentRow.getGroup())
-                                            .internal(componentRow.isInternal())
-                                            .lastInheritedRiskScore(componentRow.getLastInheritedRiskScore())
-                                            .license(componentRow.getLicense())
-                                            .licenseExpression(componentRow.getLicenseExpression())
-                                            .licenseUrl(componentRow.getLicenseUrl())
-                                            .resolvedLicense(mapLicense(componentRow.getResolvedLicense()))
-                                            .occurrenceCount(componentRow.getOccurrenceCount())
-                                            .purl(componentRow.getPurl().toString())
-                                            .swidTagId(componentRow.getSwidTagId())
-                                            .uuid(componentRow.getUuid())
-                                            .version(componentRow.getVersion())
-                                            .build())
-                            .toList())
+                    .items(responseItems)
                     .nextPageToken(componentsPage.nextPageToken())
                     .total(convertTotalCount(componentsPage.totalCount()))
                     .build();
